examples/test/testpolicy17192.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17192
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key34: value24
      key35: value17
      key22: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value36
          key29: value40
          key42: value21
      podSelector:
        matchLabels:
          key3: value4
